--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,5 +13,5 @@
 <div class="links">
 	<%= link_to 'Edit', edit_project_path(@project) %> |
 	<%= link_to 'Back', projects_path %> |
-	<%= link_to 'Delete',project_path(@project), method: :delete, data: { confirm: "Are you sure?" } %>
+	<%= button_to 'Delete',project_path(@project), method: :delete, data: { confirm: "Are you sure?" } %>
 </div>
