--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,7 +1,7 @@
 <div class="row clearfix">
 	<% if task.completed? %>
 		<div class="complete">
-			<%= link_to complete_project_task_path(@project, task.id), method: :patch do %>
+			<%= button_to complete_project_task_path(@project, task.id), method: :patch do %>
 				<i style="opacity:0.4;" class="fa fa-check"></i>
 			<% end %>
 		</div>
@@ -9,7 +9,7 @@
 			<p style="opacity: 0.4;"><strike><%= task.content %></strike></p>
 		</div>
 		<div class="trash">
-			<%= link_to project_task_path(@project, task.id), method: :delete, data: { confirm: "Are you sure?" } do %>
+			<%= button_to project_task_path(@project, task.id), method: :delete, data: { confirm: "Are you sure?" } do %>
 				<i class="fa fa-trash"></i>
 			<% end %>
 		</div>
@@ -23,7 +23,7 @@
 			<p><%= task.content %></p>
 		</div>
 		<div class="trash">
-			<%= link_to project_task_path(@project, task.id), method: :delete, data: { confirm: "Are you sure?" } do %>
+			<%= button_to project_task_path(@project, task.id), method: :delete, data: { confirm: "Are you sure?" } do %>
 				<i class="fa fa-trash"></i>
 			<% end %>
 		</div>
